[package]
name = "ritz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version="1.32.0", features=["full"] }
git2 = "0.18.1"
chrono = "0.4.31"
anyhow = "1.0.75"
include_dir = "0.7.3"
