[package]
name = "ritz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
tokio = { version="1.42.0", features=["full"] }
git2 = "0.19.0"
chrono = "0.4.39"
anyhow = "1.0.95"
include_dir = "0.7.4"
